--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "mongoose": "^5.13.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
